tests/ui/conditional-compilation/cfg-attr-invalid-predicate.stderr
error[E0539]: malformed `cfg` attribute input
  --> $DIR/cfg-attr-invalid-predicate.rs:1:1
   |
LL | #[cfg(foo(bar))]
   | ^^^^^^--------^^
   |       |
   |       valid arguments are `any`, `all`, `not`, `target` or `version`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/conditional-compilation.html#the-cfg-attribute>
help: must be of the form
   |
LL - #[cfg(foo(bar))]
LL + #[cfg(predicate)]
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0539`.
